cgo/include/urnetwork_sdk.h

/* FindLocationsCallback */
typedef void (*urnet_find_locations_cb)(void* user_data, const char* result_json, const char* err_param);
/* GenerateSeedphraseCallback */
typedef void (*urnet_generate_seedphrase_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetAccountPaymentsCallback */
typedef void (*urnet_get_account_payments_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetAccountPointsCallback */
typedef void (*urnet_get_account_points_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetAccountWalletsCallback */
typedef void (*urnet_get_account_wallets_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetLeaderboardCallback */
typedef void (*urnet_get_leaderboard_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkBlockedLocationsCallback */
typedef void (*urnet_get_network_blocked_locations_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkClientsCallback */
typedef void (*urnet_get_network_clients_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkLeaderboardRankingCallback */
typedef void (*urnet_get_network_leaderboard_ranking_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkRedeemedBalanceCodesCallback */
typedef void (*urnet_get_network_redeemed_balance_codes_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkReferralCodeCallback */
typedef void (*urnet_get_network_referral_code_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkReliabilityCallback */
typedef void (*urnet_get_network_reliability_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetNetworkUserCallback */
typedef void (*urnet_get_network_user_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetPayoutWalletCallback */
typedef void (*urnet_get_payout_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetPointsLeaderboardCallback */
typedef void (*urnet_get_points_leaderboard_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetReferralNetworkCallback */
typedef void (*urnet_get_referral_network_cb)(void* user_data, const char* result_json, const char* err_param);
/* GetTransferStatsCallback */
typedef void (*urnet_get_transfer_stats_cb)(void* user_data, const char* result_json, const char* err_param);
/* ListApiKeysCallback */
typedef void (*urnet_list_api_keys_cb)(void* user_data, const char* result_json, const char* err_param);
/* NetworkBlockLocationCallback */
typedef void (*urnet_network_block_location_cb)(void* user_data, const char* result_json, const char* err_param);
/* NetworkCheckCallback */
typedef void (*urnet_network_check_cb)(void* user_data, const char* result_json, const char* err_param);
/* NetworkCreateCallback */
typedef void (*urnet_network_create_cb)(void* user_data, const char* result_json, const char* err_param);
/* NetworkDeleteCallback */
typedef void (*urnet_network_delete_cb)(void* user_data, const char* result_json, const char* err_param);
/* NetworkUnblockLocationCallback */
typedef void (*urnet_network_unblock_location_cb)(void* user_data, const char* result_json, const char* err_param);
/* NetworkUserUpdateCallback */
typedef void (*urnet_network_user_update_cb)(void* user_data, const char* result_json, const char* err_param);
/* OnboardingClickCallback */
typedef void (*urnet_onboarding_click_cb)(void* user_data, const char* result_json, const char* err_param);
/* OnboardingFeedbackTokenCallback */
typedef void (*urnet_onboarding_feedback_token_cb)(void* user_data, const char* result_json, const char* err_param);
/* OnboardingOfferIssueCallback */
typedef void (*urnet_onboarding_offer_issue_cb)(void* user_data, const char* result_json, const char* err_param);
/* RedeemBalanceCodeCallback */
typedef void (*urnet_redeem_balance_code_cb)(void* user_data, const char* result_json, const char* err_param);
/* RefreshJwtCallback */
typedef void (*urnet_refresh_jwt_cb)(void* user_data, const char* result_json, const char* err_param);
/* RegenerateSeedphraseCallback */
typedef void (*urnet_regenerate_seedphrase_cb)(void* user_data, const char* result_json, const char* err_param);
/* RemoveAuthCallback */
typedef void (*urnet_remove_auth_cb)(void* user_data, const char* result_json, const char* err_param);
/* RemoveNetworkClientCallback */
typedef void (*urnet_remove_network_client_cb)(void* user_data, const char* result_json, const char* err_param);
/* RemoveWalletCallback */
typedef void (*urnet_remove_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* SendFeedbackCallback */
typedef void (*urnet_send_feedback_cb)(void* user_data, const char* result_json, const char* err_param);
/* SetEmojiTagCallback */
typedef void (*urnet_set_emoji_tag_cb)(void* user_data, const char* result_json, const char* err_param);
/* SetNetworkLeaderboardPublicCallback */
typedef void (*urnet_set_network_leaderboard_public_cb)(void* user_data, const char* result_json, const char* err_param);
/* SetNetworkReferralCallback */
typedef void (*urnet_set_network_referral_cb)(void* user_data, const char* result_json, const char* err_param);
/* SetPayoutWalletCallback */
typedef void (*urnet_set_payout_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* SetPointsLeaderboardPublicCallback */
typedef void (*urnet_set_points_leaderboard_public_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnEpochCallback */
typedef void (*urnet_sn_epoch_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnGetWalletCallback */
typedef void (*urnet_sn_get_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnHeadCallback */
typedef void (*urnet_sn_head_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnSetWalletCallback */
typedef void (*urnet_sn_set_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* SnValidateWalletCallback */
typedef void (*urnet_sn_validate_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* StripeCreateCustomerPortalCallback */
typedef void (*urnet_stripe_create_customer_portal_cb)(void* user_data, const char* result_json, const char* err_param);
/* StripePaymentSheetCallback */
typedef void (*urnet_stripe_payment_sheet_cb)(void* user_data, const char* result_json, const char* err_param);
/* StripePricesCallback */
typedef void (*urnet_stripe_prices_cb)(void* user_data, const char* result_json, const char* err_param);
/* SubscriptionBalanceCallback */
typedef void (*urnet_subscription_balance_cb)(void* user_data, const char* result_json, const char* err_param);
void urnet_api_generate_seedphrase(uint64_t self, const char* args_json, urnet_generate_seedphrase_cb callback_result, void* callback_user_data);
void urnet_api_get_account_payments(uint64_t self, urnet_get_account_payments_cb callback_result, void* callback_user_data);
void urnet_api_get_account_points(uint64_t self, urnet_get_account_points_cb callback_result, void* callback_user_data);
void urnet_api_get_account_wallets(uint64_t self, urnet_get_account_wallets_cb callback_result, void* callback_user_data);
char* urnet_api_get_by_jwt(uint64_t self);
void urnet_api_get_leaderboard(uint64_t self, const char* args_json, urnet_get_leaderboard_cb callback_result, void* callback_user_data);
void urnet_api_get_network_blocked_locations(uint64_t self, urnet_get_network_blocked_locations_cb callback_result, void* callback_user_data);
void urnet_api_get_network_clients(uint64_t self, urnet_get_network_clients_cb callback_result, void* callback_user_data);
void urnet_api_get_network_leaderboard_ranking(uint64_t self, urnet_get_network_leaderboard_ranking_cb callback_result, void* callback_user_data);
void urnet_api_get_network_redeemed_balance_codes(uint64_t self, urnet_get_network_redeemed_balance_codes_cb callback_result, void* callback_user_data);
void urnet_api_get_network_referral_code(uint64_t self, urnet_get_network_referral_code_cb callback_result, void* callback_user_data);
void urnet_api_get_network_reliability(uint64_t self, urnet_get_network_reliability_cb callback_result, void* callback_user_data);
void urnet_api_get_network_user(uint64_t self, urnet_get_network_user_cb callback_result, void* callback_user_data);
void urnet_api_get_payout_wallet(uint64_t self, urnet_get_payout_wallet_cb callback_result, void* callback_user_data);
void urnet_api_get_points_leaderboard(uint64_t self, const char* args_json, urnet_get_points_leaderboard_cb callback_result, void* callback_user_data);
void urnet_api_get_provider_locations(uint64_t self, urnet_find_locations_cb callback_result, void* callback_user_data);
void urnet_api_get_referral_network(uint64_t self, urnet_get_referral_network_cb callback_result, void* callback_user_data);
void urnet_api_get_transfer_stats(uint64_t self, urnet_get_transfer_stats_cb callback_result, void* callback_user_data);
void urnet_api_list_api_keys(uint64_t self, urnet_list_api_keys_cb callback_result, void* callback_user_data);
void urnet_api_network_block_location(uint64_t self, const char* args_json, urnet_network_block_location_cb callback_result, void* callback_user_data);
void urnet_api_network_check(uint64_t self, const char* network_check_json, urnet_network_check_cb callback_result, void* callback_user_data);
void urnet_api_network_create(uint64_t self, const char* network_create_json, urnet_network_create_cb callback_result, void* callback_user_data);
void urnet_api_network_delete(uint64_t self, urnet_network_delete_cb callback_result, void* callback_user_data);
void urnet_api_network_unblock_location(uint64_t self, const char* args_json, urnet_network_unblock_location_cb callback_result, void* callback_user_data);
void urnet_api_network_user_update(uint64_t self, const char* update_network_user_json, urnet_network_user_update_cb callback_result, void* callback_user_data);
void urnet_api_onboarding_click(uint64_t self, const char* args_json, urnet_onboarding_click_cb callback_result, void* callback_user_data);
void urnet_api_onboarding_feedback_token(uint64_t self, const char* token, int64_t rating, const char* reason, urnet_onboarding_feedback_token_cb callback_result, void* callback_user_data);
void urnet_api_onboarding_offer_issue(uint64_t self, const char* args_json, urnet_onboarding_offer_issue_cb callback_result, void* callback_user_data);
void urnet_api_redeem_balance_code(uint64_t self, const char* args_json, urnet_redeem_balance_code_cb callback_result, void* callback_user_data);
void urnet_api_refresh_jwt(uint64_t self, urnet_refresh_jwt_cb callback_result, void* callback_user_data);
char* urnet_api_refresh_jwt_sync(uint64_t self, char** out_error);
void urnet_api_regenerate_seedphrase(uint64_t self, const char* args_json, urnet_regenerate_seedphrase_cb callback_result, void* callback_user_data);
void urnet_api_remove_auth(uint64_t self, const char* args_json, urnet_remove_auth_cb callback_result, void* callback_user_data);
void urnet_api_remove_network_client(uint64_t self, const char* args_json, urnet_remove_network_client_cb callback_result, void* callback_user_data);
char* urnet_api_remove_network_client_sync(uint64_t self, const char* args_json, char** out_error);
void urnet_api_remove_wallet(uint64_t self, const char* remove_wallet_json, urnet_remove_wallet_cb callback_result, void* callback_user_data);
void urnet_api_request_jwt_refresh(uint64_t self);
void urnet_api_send_feedback(uint64_t self, const char* send_feedback_json, urnet_send_feedback_cb callback_result, void* callback_user_data);
void urnet_api_set_by_jwt(uint64_t self, const char* by_jwt);
void urnet_api_set_emoji_tag(uint64_t self, const char* args_json, urnet_set_emoji_tag_cb callback_result, void* callback_user_data);
void urnet_api_set_network_leaderboard_public(uint64_t self, const char* args_json, urnet_set_network_leaderboard_public_cb callback_result, void* callback_user_data);
void urnet_api_set_network_referral(uint64_t self, const char* args_json, urnet_set_network_referral_cb callback_result, void* callback_user_data);
void urnet_api_set_payout_wallet(uint64_t self, const char* payout_wallet_json, urnet_set_payout_wallet_cb callback_result, void* callback_user_data);
void urnet_api_set_points_leaderboard_public(uint64_t self, const char* args_json, urnet_set_points_leaderboard_public_cb callback_result, void* callback_user_data);
void urnet_api_sn_epoch(uint64_t self, urnet_sn_epoch_cb callback_result, void* callback_user_data);
char* urnet_api_sn_epoch_sync(uint64_t self, char** out_error);
void urnet_api_sn_get_wallet(uint64_t self, urnet_sn_get_wallet_cb callback_result, void* callback_user_data);
void urnet_api_sn_head(uint64_t self, urnet_sn_head_cb callback_result, void* callback_user_data);
char* urnet_api_sn_pool_claim_sync(uint64_t self, const char* args_json, char** out_error);
void urnet_api_sn_set_wallet(uint64_t self, const char* args_json, urnet_sn_set_wallet_cb callback_result, void* callback_user_data);
char* urnet_api_sn_set_wallet_sync(uint64_t self, const char* args_json, char** out_error);
void urnet_api_sn_validate_wallet(uint64_t self, const char* address, urnet_sn_validate_wallet_cb callback_result, void* callback_user_data);
void urnet_api_start_jwt_refresh(uint64_t self);
void urnet_api_stripe_create_customer_portal(uint64_t self, const char* args_json, urnet_stripe_create_customer_portal_cb callback_result, void* callback_user_data);
void urnet_api_stripe_payment_sheet(uint64_t self, const char* args_json, urnet_stripe_payment_sheet_cb callback_result, void* callback_user_data);
void urnet_api_stripe_prices(uint64_t self, const char* storefront_country, urnet_stripe_prices_cb callback_result, void* callback_user_data);
void urnet_api_subscription_balance(uint64_t self, urnet_subscription_balance_cb callback_result, void* callback_user_data);