csharp/Raw.g.cs

  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_generate_seedphrase(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_generate_seedphrase_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_account_payments(ulong a0, urnet_get_account_payments_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_account_points(ulong a0, urnet_get_account_points_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_account_wallets(ulong a0, urnet_get_account_wallets_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_api_get_by_jwt(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_leaderboard(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_get_leaderboard_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_network_blocked_locations(ulong a0, urnet_get_network_blocked_locations_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_network_clients(ulong a0, urnet_get_network_clients_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_network_leaderboard_ranking(ulong a0, urnet_get_network_leaderboard_ranking_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_network_redeemed_balance_codes(ulong a0, urnet_get_network_redeemed_balance_codes_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_network_referral_code(ulong a0, urnet_get_network_referral_code_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_network_reliability(ulong a0, urnet_get_network_reliability_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_network_user(ulong a0, urnet_get_network_user_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_payout_wallet(ulong a0, urnet_get_payout_wallet_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_points_leaderboard(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_get_points_leaderboard_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_provider_locations(ulong a0, urnet_find_locations_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_referral_network(ulong a0, urnet_get_referral_network_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_get_transfer_stats(ulong a0, urnet_get_transfer_stats_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_list_api_keys(ulong a0, urnet_list_api_keys_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_network_block_location(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_network_block_location_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_network_check(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_network_check_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_network_create(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_network_create_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_network_delete(ulong a0, urnet_network_delete_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_network_unblock_location(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_network_unblock_location_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_network_user_update(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_network_user_update_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_onboarding_click(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_onboarding_click_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_onboarding_feedback_token(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, long a2, [MarshalAs(UnmanagedType.LPUTF8Str)] string a3, urnet_onboarding_feedback_token_cb a4, IntPtr a5);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_onboarding_offer_issue(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_onboarding_offer_issue_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_redeem_balance_code(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_redeem_balance_code_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_refresh_jwt(ulong a0, urnet_refresh_jwt_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_api_refresh_jwt_sync(ulong a0, out IntPtr a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_regenerate_seedphrase(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_regenerate_seedphrase_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_remove_auth(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_remove_auth_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_remove_network_client(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_remove_network_client_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_api_remove_network_client_sync(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, out IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_remove_wallet(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_remove_wallet_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_request_jwt_refresh(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_send_feedback(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_send_feedback_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_set_by_jwt(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_set_emoji_tag(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_set_emoji_tag_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_set_network_leaderboard_public(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_set_network_leaderboard_public_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_set_network_referral(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_set_network_referral_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_set_payout_wallet(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_set_payout_wallet_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_set_points_leaderboard_public(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_set_points_leaderboard_public_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_sn_epoch(ulong a0, urnet_sn_epoch_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_api_sn_epoch_sync(ulong a0, out IntPtr a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_sn_get_wallet(ulong a0, urnet_sn_get_wallet_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_sn_head(ulong a0, urnet_sn_head_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_api_sn_pool_claim_sync(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, out IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_sn_set_wallet(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_sn_set_wallet_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_api_sn_set_wallet_sync(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, out IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_sn_validate_wallet(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_sn_validate_wallet_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_start_jwt_refresh(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_stripe_create_customer_portal(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_stripe_create_customer_portal_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_stripe_payment_sheet(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_stripe_payment_sheet_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_stripe_prices(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_stripe_prices_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_subscription_balance(ulong a0, urnet_subscription_balance_cb a1, IntPtr a2);
